_sass/justpeace.scss
/* ... */
.section-title:after {
  content: "";
  -webkit-box-flex: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  height: 1px;
  background: #fde4d2;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 10px;
}

// .container {
//   //   background-color: white;
//   @media (max-width: 1200px) {
//     width: 1200px;
//   }
//   @media (max-width: 960px) {
//     width: 100%;
//   }
//   @media (max-width: 800px) {
//     width: 100%;
//   }
//   @media (max-width: 640px) {
//     width: 100%;
//   }
//   @media (max-width: 425px) {
//     width: 100%;
//   }
// }

.head-container {
  padding-right: 10px;
  padding-left: 10px;
  display: flex;
  flex-flow: column;
  height: 100%;
}

.message {
  // max-width: 90%;
  margin-left: auto;
  margin-right: auto;
  height: 400px;
  display: flex;
  flex-flow: row;
  font-size: 14px;
  @media (max-width: 750px) {
    flex-flow: column;
  }
  .text {
    display: flex;
    min-width: 280px; // flex-flow: column;
    align-items: center;
    /* Vertical center alignment */
    padding-left: 20px;
    @media (max-width: 750px) {
      display: none;
      visibility: hidden;
    }
    .lead {
      font-weight: 600;
      font-size: 21px;
    }
    p {
      font-size: 18px;
    }
  }
}

.objective {
  font-size: 3em;
  line-height: 1.2;
  height: 400px;
  text-align: center;
  display: table;
}

.objective-small {
  font-size: 2em;
  line-height: 1.2;
  text-align: center;
  padding: 20px;
}

.objective > div {
  display: table-cell; 
  vertical-align: middle; 
  text-align: center; 
}

// .what-we-do {
//     @media (min-width: 750px) {
//         display: none;
//         visibility: hidden;
//     }
// }

.screenshots {
  display: flex;
  flex-flow: column;
  height: 100%;
}

.filler {
  flex: 1;
  /* 1 and it will fill whole space left if no flex value are set to other children*/
  overflow: auto;
}

.front_sections {
  font-size: 16px;
}

.front-row {
  // display: flex;
  // align-items: center;
  @media screen and (min-width: 750px) {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    text-align: left;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    &:nth-of-type(even) .approach_body {
      position: relative;
      left: -30%;
    }
    &:nth-of-type(even) .approach_illustration {
      position: relative;
      left: 70%;
      .approach_icon {
        text-align: right;
      }
    }
  }
  .approach_illustration {
    @media screen and (min-width: 0px) {
      width: 100%;
    }
    @media screen and (min-width: 750px) {
      width: 30%;
    }
  }
  .approach_body {
    @media screen and (min-width: 0px) {
      width: 100%;
    }
    @media screen and (min-width: 750px) {
      width: 70%;
    }
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

.approach_icon {
  width: 100%;
  @media (min-width: 0px) {
    text-align: center;
  }
  @media (min-width: 750px) {
    text-align: left;
  }
  img {
    width: 100px;
    max-width: 100px;
    @media (min-width: 750px) {
      width: 175px;
      max-width: 175px;
      text-align: left;
    }
  }
}

.footer h2 {
  text-transform: uppercase;
}

.svg-canvas {
  height: 100%;
}

#phone_screenshot {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
  img {
    // max-width: 400px;
    @media (max-width: 640px) {
      width: 200px;
    }
    @media (max-width: 800px) {
      width: 200px;
    }
    @media (min-width: 800px) {
      width: 350px;
    }
  }
}

/*
Fade content bs-carousel with hero headers
Code snippet by maridlcrmn (Follow me on Twitter @maridlcrmn) for Bootsnipp.com
Image credits: unsplash.com
*/

/********************************/

/*       Fade Bs-carousel       */

/********************************/

.fade-carousel {
  position: relative;
  height: 40vh;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  overflow: hidden;
  border-bottom: 1px solid rgba(13, 57, 98, 0.42);
}

.fade-carousel .carousel-inner .item {
  height: 40vh;
}

.fade-carousel .carousel-indicators > li {
  margin: 0 2px;
  background-color: #f39c12;
  border-color: #f39c12;
  opacity: 0.7;
}

.fade-carousel .carousel-indicators > li.active {
  width: 10px;
  height: 10px;
  opacity: 1;
}

.carousel-indicators {
  bottom: none;
  top: 10px;
}

/********************************/

/*          Hero Headers        */

/********************************/

.hero {
  width: 100%; // position: absolute;
  // // top: 50%;
  // left: 50%;
  // bottom: 0;
  z-index: 3; // // color: #fff;
  // // text-align: center;
  // // text-transform: uppercase;
  // // text-shadow: 1px 1px 0 rgba(0,0,0,.75);
  //   -webkit-transform: translate3d(-50%,-50%,0);
  //      -moz-transform: translate3d(-50%,-50%,0);
  //       -ms-transform: translate3d(-50%,-50%,0);
  //        -o-transform: translate3d(-50%,-50%,0);
  //           transform: translate3d(-50%,-50%,0);
}

.hero h1 {
  // font-size: 6em;
  // font-weight: bold;
  margin: 0;
  padding: 0;
}
/* ... */

